<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/autocomplete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:width="200sp"
            android:text="@string/autocomplete_btn" />

        <Button
            android:id="@+id/togglebutton_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:width="200sp"
            android:text="@string/togglebutton_btn" />

        <Button
            android:id="@+id/datepicker_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:width="200sp"
            android:text="@string/datepicker_btn" />

        <Button
            android:id="@+id/imageview_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:width="200sp"
            android:text="@string/imageview_btn" />

        <Button
            android:id="@+id/alert_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:width="200sp"
            android:text="@string/alert_btn" />

        <LinearLayout
            android:id="@+id/layoutForCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/checkbox_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="120sp"
                android:text="@string/checkbox_btn" />

            <Button
                android:id="@+id/checkbox_btn_v2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:text="@string/checkbox_btn_v2" />
        </LinearLayout>

        <Button
            android:id="@+id/seekbar_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:width="200sp"
            android:text="@string/seekbar_btn" />

        <Button
            android:id="@+id/arrayadapter_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:width="200sp"
            android:text="@string/arrayadapter_btn" />

        <Button
            android:id="@+id/toast_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:width="200sp"
            android:text="@string/toast_btn" />

        <Button
            android:id="@+id/radiobutton_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:width="200sp"
            android:text="@string/radiobutton_btn" />

        <Button
            android:id="@+id/timepicker_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:width="200sp"
            android:text="@string/timepicker_btn" />

        <Button
            android:id="@+id/serializable_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:width="200sp"
            android:text="@string/serializable_btn" />

        <Button
            android:id="@+id/custom_adapter_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:width="200sp"
            android:text="@string/custom_adapter_btn" />

        <Button
            android:id="@+id/layers_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:width="200sp"
            android:text="@string/layers_btn" />

        <Button
            android:id="@+id/fragments_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:width="200sp"
            android:text="@string/fragments_btn" />

        <Button
            android:id="@+id/multithread_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:width="200sp"
            android:text="@string/multithread_btn" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/webview_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10sp"
                android:width="120sp"
                android:text="@string/webview_btn" />

            <Button
                android:id="@+id/httpurlconnection_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/httpurlconnection_btn" />
        </LinearLayout>

        <Button
            android:id="@+id/savestate_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:width="200sp"
            android:text="@string/savestate_btn" />

    </LinearLayout>
</ScrollView>

